Feat: finish first version

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "javascript"
   ],
   "author": "Pandy",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Penggeor/dodollar/issues"
   },
